[tool.poetry]
name = "dsp-integration"
version = "0.1.0"
description = "Rate-limited DSP submission engine in Django"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
celery = "^5.4"
django-celery-beat = "^2.4"
django-celery-results = "^2.5"
psycopg2-binary = "^2.9"
requests = "^2.31"
gunicorn = "^20.1.0"
redis = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
