[tool.poetry]
name = "dsp-integration"
version = "0.1.0"
description = "Rate-limited DSP submission engine in Django"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
celery = "^5.4"
django-celery-beat = "^2.4"
django-celery-results = "^2.5"
psycopg2-binary = "^2.9"
requests = "^2.31"
redis = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
responses = "^0.23.1"

[tool.pytest.ini_options]
# point pytest-django at your settings module
DJANGO_SETTINGS_MODULE = "dsp_integration.settings"
# discover tests in files named test_*.py
python_files = ["test_*.py"]